--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,11 @@ addons:
     - gcc-4.8
     - clang
 cache:
- directories:
- - node_modules
- - public/dist
+  directories:
+  - node_modules
+  - public/dist
 before_install:
-- openssl aes-256-cbc -K $encrypted_6729f53900bc_key -iv $encrypted_6729f53900bc_iv
+- openssl aes-256-cbc -K $encrypted_e5561fcccd1f_key -iv $encrypted_e5561fcccd1f_iv
   -in deploy_key.enc -out deploy_key -d
 - gem update --system
 - gem install sass --version "=3.3.7"
@@ -42,16 +42,18 @@ after_script:
 - gulp test:coverage
 - node_modules/.bin/lcov-result-merger 'coverage/**/lcov.info' | node_modules/coveralls/bin/coveralls.js
 deploy:
-  - provider: script
-    skip_cleanup: true
-    script: rsync -r -e "ssh -p $SSH_PORT -o StrictHostKeyChecking=no" --delete-after --quiet $TRAVIS_BUILD_DIR/ $USER@$SERVER:$DEPLOY_PATH
-    on:
-      branch: master
-  - provider: script
-    skip_cleanup: true
-    script: ssh -p $SSH_PORT $USER@$SERVER -o StrictHostKeyChecking=no "cd $DEPLOY_PATH && gulp WeaosProd"
-    on:
-      branch: master
+- provider: script
+  skip_cleanup: true
+  script: rsync -r -e "ssh -p $SSH_PORT -o StrictHostKeyChecking=no" --delete-after
+    --quiet $TRAVIS_BUILD_DIR/ $USER@$SERVER:$DEPLOY_PATH
+  on:
+    branch: master
+- provider: script
+  skip_cleanup: true
+  script: ssh -p $SSH_PORT $USER@$SERVER -o StrictHostKeyChecking=no "cd $DEPLOY_PATH
+    && gulp WeaosProd"
+  on:
+    branch: master
 notifications:
   webhooks:
     urls:
