--- a/bower.json
+++ b/bower.json
@@ -34,7 +34,9 @@
     "ngHandsontable": "^0.12.0",
     "angular-color-picker": "angularjs-color-picker#^1.1.6",
     "alasql": "^0.3.6",
-    "angular-drag-and-drop-lists": "^2.1.0"
+    "angular-drag-and-drop-lists": "^2.1.0",
+    "highcharts-ng": "^1.0.0",
+    "highcharts": "^5.0.7"
   },
   "resolutions": {
     "angular": "~1.5.0"
