--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,11 @@ modules/users/client/img/profile/uploads
 config/env/local.js
 *.pem
 
+# Compiled less and sass files
+# ============================
+modules/*/client/scss/*.css
+modules/*/client/less/*.css
+
 # Ignoring MEAN.JS's gh-pages branch for documenation
 _site/
 
