--- a/bower.json
+++ b/bower.json
@@ -4,27 +4,24 @@
   "homepage": "http://meanjs.org/",
   "license": "MIT",
   "dependencies": {
+    "jquery": "^2.2.3",
     "angular": "~1.5.0",
     "angular-animate": "~1.5.0",
-    "angular-bootstrap": "~1.2.1",
     "angular-messages": "~1.5.0",
     "angular-mocks": "~1.5.0",
     "angular-resource": "~1.5.0",
     "angular-ui-router": "~0.2.18",
-    "ng-file-upload": "^12.1.0",
-    "ng-img-crop": "ngImgCrop#^0.3.2",
+    "ng-file-upload": "~12.1.0",
     "owasp-password-strength-test": "~1.3.0",
-    "angular-sanitize": "^1.5.5",
     "angular-tooltips": "^1.0.9",
-    "angular-material": "1.1.0",
-    "angular-materialize": "^0.1.8",
-    "materialize": "~0.97.6",
+    "angular-aria": "~1.5.0",
+    "angular-material": "1.1.3",
     "font-awesome": "fontawesome#^4.5.0",
     "lodash": "^4.6.1",
     "angular-loading-bar": "^0.9.0",
     "angularUtils-pagination": "angular-utils-pagination#^0.11.1",
+    "angular-sanitize": "~1.5.0",
     "d3": "^3.5.16",
-    "angular-loading-bar": "^0.9.0",
     "d3-plugins": "*",
     "FileSaver": "*",
     "canvas-toBlob.js": "https://github.com/eligrey/canvas-toBlob.js.git",
