--- a/bower.json
+++ b/bower.json
@@ -21,18 +21,22 @@
     "angular-loading-bar": "^0.9.0",
     "angularUtils-pagination": "angular-utils-pagination#^0.11.1",
     "angular-sanitize": "~1.5.0",
-    "d3": "^3.5.16",
+    "d3": "^3.5.17",
     "d3-plugins": "*",
     "FileSaver": "*",
     "canvas-toBlob.js": "https://github.com/eligrey/canvas-toBlob.js.git",
     "jqueryui-touch-punch": "*",
-    "codemirror": "^5.15.2",
+    "codemirror": "latest",
     "jquery-ui": "^1.11.4",
     "file-saver": "FileSaver#^1.3.1",
     "ngclipboard": "^1.1.1",
     "angular-ui-codemirror": "^0.3.0",
     "ngHandsontable": "^0.12.0",
-    "angular-color-picker": "angularjs-color-picker#^1.1.6"
+    "angular-color-picker": "angularjs-color-picker#^1.1.6",
+    "zeroclipboard": "2.3.0",
+    "is_js": "0.9.0",
+    "js-xlsx": "0.8.5",
+    "d3-plugins-density": "latest"
   },
   "resolutions": {
     "angular": "~1.5.0"
