--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
     "file-saver": "FileSaver#^1.3.1",
     "ngclipboard": "^1.1.1",
     "angular-ui-codemirror": "^0.3.0",
+    "angular-ui": "0.4.0",
     "ngHandsontable": "^0.12.0",
     "angular-color-picker": "angularjs-color-picker#^1.1.6",
     "zeroclipboard": "2.3.0",
